--- a/my-youtube-clone/src/components/SearchResultsPage/SearchResultsPage.module.css
+++ b/my-youtube-clone/src/components/SearchResultsPage/SearchResultsPage.module.css
@@ -1,4 +1,7 @@
 .SearchResultsPage {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
     padding: 1rem;
 }
 
